--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Harsh Raj</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,11 +12,11 @@
   </head>
   <body class="website-body">
     <div class="top-container">
-      <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+      <img class="top-cloud" src="cloud.png" alt="cloud-img">
       <h1>I'm Harsh,</h1>
       <h2 class="AH2">a <span><u>pro</u></span>grammer.</h2>
-      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-      <img class="mountain" src="images/mountain.png" alt="mountain-img">
+      <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
+      <img class="mountain" src="mountain.png" alt="mountain-img">
     </div>
     <div class="middle-container">
       <div class="profile">
